# feeding-llm-pdf-test

./: CONTRIBUTING.md  MISSION_REPORT_CITATIONS.md  README.md  _analyze_models.py  cli_main.py  config.py  gui_main.py  main.py  output.md  poe_llm_lists.json  pyproject.toml
.embeddings_cache/: 1920c819_embeddings.json  1f7d1d46_embeddings.json  b2b2611e_embeddings.json
docs/: WINDOWS_SETUP.md  architecture.md
examples/: example_usage.py
src/: __init__.py  config.py
src/core/: __init__.py  embeddings.py  reranker.py  retrieval.py
src/gui/: __init__.py  main_window.py  widgets.py
tests/: test_advanced.py  test_audit.py  test_integration.py  test_rag.py  test_regression.py
utils/: embeddings.py  pdf_processor.py  reranker.py  retrieval.py
